--- a/Rock_Paper_Scissors.ipynb
+++ b/Rock_Paper_Scissors.ipynb
@@ -464,6 +464,7 @@
         "#148 x 148 -> 74 x 74 with 2 x 2 window in MaxPooling\n",
         "#7 x 7 x 128 -> 1 x 6272 Flatten array\n",
         "#6272*512 neurons + 512 (bias units)  -> 3,211,776‬ params in hidden layer\n",
+        "#512*3 neurons + 3 (bias units)  -> 1539 params in output layer\n",
         "\n",
         "model.compile(loss = 'categorical_crossentropy', optimizer=RMSprop(lr=1e-4), metrics=['accuracy']) \n",
         "#using cce loss function as targets are one hot encoded, setting learning rate and desired metric\n",
@@ -575,7 +576,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Visualize accuracy and loss"
+        "#Visualize train & valid accuracy"
       ]
     },
     {
